--- a/GameStore.Web/Views/Home/Index.cshtml
+++ b/GameStore.Web/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model PagedList.IPagedList<GameStore.Web.Models.GameSearchModel>
+﻿@*@model PagedList.IPagedList<GameStore.Web.Models.GameSearchModel>
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
-@using PagedList.Mvc;
+@using PagedList.Mvc;*@
 
 <div class="col-lg-3">
 
-    
+   
 </div>
 <div class="col-lg-8" id="result">
    
