--- a/GameStore.Web/Views/Home/MakeOrder.cshtml
+++ b/GameStore.Web/Views/Home/MakeOrder.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <input type="hidden" name="GameId" value="@Model.GameId" />
+        <input type="hidden" name="GameId" value="@Model.Id" />
 
         <div class="form-group">
             @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
