--- a/GameStore.Web/Views/Game/Index.cshtml
+++ b/GameStore.Web/Views/Game/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="col-lg-3">
-
+   
 </div>
 <div id="main-div">
     <div class="clearfix">&nbsp;</div>
     <div class="clearfix">&nbsp;</div>
     <div class="container" id="result">
-        <a href="@Url.Action("Add", "Game")" id="Add" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;Create New</a>
+        <a href="@Url.Action("Add", "Game")" id="Add" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;Create Game</a>
         @*<div class="col-lg-8" id="result div-record">*@
             <div id="div-record">
                 @Html.Partial("AllGames")
