--- a/GameStore.Web/Views/Game/Add.cshtml
+++ b/GameStore.Web/Views/Game/Add.cshtml
@@ -23,8 +23,8 @@
         <div class="row form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-user-plus"></i></span>                   
-                    @Html.TextBoxFor(m => m.Price , new {@class = "form-control", @placeholder = "Price" })
+                    <span class="input-group-addon"><i class="fa fa-globe"></i></span>
+                    @Html.TextBoxFor(m => m.Price, new { @class = "form-control", @placeholder = "Price" })
                 </div>
             </div>
         </div>
@@ -39,8 +39,8 @@
         <div class="row form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-globe"></i></span>
-                    @Html.TextBoxFor(m => m.GameCategory, new { @class = "form-control", @placeholder = "Category" })
+                    <span class="input-group-addon"><i class="fa fa-user-plus"></i></span>
+                    @Html.DropDownListFor(m => m.CategoryId, ViewBag.CreateCategory as SelectList, new { @class = "form-control"})
                 </div>
             </div>
         </div>
