--- a/GameStore.Web/Views/Game/Edit.cshtml
+++ b/GameStore.Web/Views/Game/Edit.cshtml
@@ -35,7 +35,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GameCategory, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GameCategory, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.GameCategory, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.DropDownListFor(m => m.CategoryId, ViewBag.EditCategory as SelectList, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GameCategory, "", new { @class = "text-danger" })
             </div>
         </div>
